fixed layout problem

--- a/Css/style.css
+++ b/Css/style.css
@@ -282,7 +282,7 @@ header {
 
     .main-container{
       background-position: center center;
-      height: 72vh;
+      height: 75vh;
     }
     .fadeBottom{
       margin-top: 160px;
